--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.22.0",
+    "express": "^4.17.1",
+    "firebase": "^9.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
