--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.22.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^9.1.1",
     "react": "^17.0.2",
