--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "dependencies": {
+    "@react-pdf/render": "^3.2.1",
     "axios": "^0.22.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^9.1.1",
+    "moment": "^2.29.4",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-multi-select-component": "^4.1.15",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
+    "react-to-print": "^2.14.7",
     "web-vitals": "^1.1.2"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
