--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@react-pdf/render": "^3.2.1",
     "axios": "^0.22.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "express": "^4.17.1",
     "firebase": "^9.1.1",
     "moment": "^2.29.4",
