--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "express": "^4.17.1",
+    "file-saver": "^2.0.5",
     "firebase": "^9.1.1",
     "moment": "^2.29.4",
     "multiselect-react-dropdown": "^2.0.25",
+    "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -19,10 +21,11 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^2.1.3",
     "react-to-print": "^2.14.7",
+    "sheetjs-style": "^0.15.8",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
