--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "date-fns": "^2.29.3",
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
-    "firebase": "^9.1.1",
+    "firebase": "^9.22.0",
     "moment": "^2.29.4",
     "multiselect-react-dropdown": "^2.0.25",
     "qrcode.react": "^3.1.0",
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
